VAL-220 Add more memory to surefire plugin